--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
-/* remove .header class and replace it with the "header" element */
+/* Removed .header class and replaced it with the "header" element */
 
 header {
     padding: 20px;
@@ -17,15 +17,16 @@ header {
     color: #ffffff;
 }
 
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
-/* removed header div and replace t with "nav" element */
+
+/* Removed header div and replaced it with "nav" element */
 
 nav {
     padding-top: 15px;
@@ -50,7 +51,7 @@ a {
 }
 
 p {
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .hero {
@@ -77,7 +78,8 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-/*replace .benefits class with the "aside" element for proper SEO readability */
+
+/* Replaced .benefits class with the "aside" element for proper SEO and readability */
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -89,50 +91,42 @@ aside {
     background-color: #2589bd;
 }
 
-/* removed this section due to repetitive declarations, merged all in ".benefits" class
-
+/*
+Removed this section due to repetitive declarations, merged all in ".benefits" class
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
 .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
 .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
 .benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
 .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
 .benefit-cost img {
     display: block;
     margin: 10px auto;
@@ -155,8 +149,9 @@ aside {
     margin: 10px auto;
     max-width: 150px;
 }
-/* removed this section due to repetitive declarations, merged all in ".card" class
 
+/*
+Removed this section due repetitive declarations, merged all in ".card" class
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -165,7 +160,6 @@ aside {
     background-color: #0072bb;
     color: #ffffff;
 }
-
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -174,7 +168,6 @@ aside {
     background-color: #0072bb;
     color: #ffffff;
 }
-
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -183,29 +176,23 @@ aside {
     background-color: #0072bb;
     color: #ffffff;
 }
-
 .search-engine-optimization img {
     max-height: 200px;
 }
-
 .online-reputation-management img {
     max-height: 200px;
 }
-
 .social-media-marketing img {
     max-height: 200px;
 }
-
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -220,14 +207,18 @@ aside {
     background-color: #0072bb;
     color: #ffffff;
 }
+
 .card img {
     max-height: 200px;
 }
+
 .card h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-/* remove .footer class and replace it with "footer" element */
+
+/* Removed .footer class and replaced it with "footer" element */
+
 footer {
     padding: 30px;
     clear: both;
